added css and js page links

--- a/locations.html
+++ b/locations.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
-    <head>Locations</title>
+    <head>
+        <title>Locations</title>
+        <link rel="stylesheet" href="styles.css">
+        <script src="script.js"></script>
 
     </head>
     <body>
