--- a/trainingplans.html
+++ b/trainingplans.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <title>Training Plans</title>
+        <link rel="stylesheet" href="styles.css">
+        <script src="script.js"></script>
 
     </head>
     <body>
