link fixed in reviews 2

--- a/reviews2.html
+++ b/reviews2.html
@@ -76,7 +76,7 @@
 
         <div><!--Pagination-->
             <ul class="pagination pagination-lg d-flex justify-content-center">
-                <li><a href="reviews.html">1</a></li>
+                <li><a href="reviews1.html">1</a></li>
                 <li class="active"><a href="reviews2.html">2</a></li>  
             </ul>
         </div><!--Pagination-->
