--- a/index.html
+++ b/index.html
@@ -14,6 +14,19 @@
 
     </head>
     <body>
+        <div class="container">
+
+            <img src= "images/logo2.png" alt="Logo" class="logo" width="200" height="auto">
+
+            <h1><center>Zombie Survival Training Camp</center></h1>
+            <center>
+                <a href="aboutUs.html">About Us</a> | 
+                <a href="reviews1.html">Reviews</a> | 
+                <a href="locations.html">Location</a> | 
+                <a href="contactUs.html">Contact Us</a>
+            </center>
+        </div>
+
 
     </body>
 </html>
