--- a/reviews1.html
+++ b/reviews1.html
@@ -11,10 +11,23 @@
         <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+        <script>
+            function loadReviews(){
+                const reviews = require('./jsonStorage/reviews.json');
+                const r = JSON.parse(reviews);
+
+                var reviews = fetch("./jsonStorage/reviews1.json").then((res) =>{return res.json();}).then((data));
+                document.getElementById("u1N").innerHTML=r.uID1[0];
+            }
+            
+            
+        </script>
 
     </head>
     <body>
-
+        <script>
+            window.onload = loadReviews();
+        </script>
 
         <!--Reviews By: Jonathan Nope-->
         <h2 class="d-flex justify-content-center" style="font-family: 'rockSalt'; font-size: 50px; color: var(--tan);">Reviews</h2>
@@ -24,7 +37,7 @@
                 <div class="media border p-3">
                     <img src="images/avatars/avatar2.JPG" alt="Maya Patel" class="mr-3 mt-3 rounded-circle" style="width:60px;">
                     <div class="media-body">
-                        <h4>Maya Patel<small><i>--July 12, 2022</i></small></h4>
+                        <h4 id="u1N"><small><i>--July 12, 2022</i></small></h4>
                         <p>""</p>
                     </div>
                 </div>
