--- a/contactUs.html
+++ b/contactUs.html
@@ -1,19 +1,91 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Contact Us</title>
-        <link rel="stylesheet" href="styles.css">
-        <script src="script.js"></script>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Zombiegeddon Academy</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Serif:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link rel="stylesheet" href="style/style.css">
+</head>
+<body>
+  <nav class="navbar navbar-expand-lg py-3 navbar-background">
+    <div class="container">
+      <a class="navbar-brand" href="index.html">
+        <img src="images/logo2.png" width="200px" class="align-middle me-1 " alt="My Website">
+      </a>
+  
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#myNavbar"
+        aria-controls="myNavbar" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-    </head>
-    <body>
+      <div class="collapse navbar-collapse" id="myNavbar">
+        <div lc-helper="shortcode" class="ms-auto">
+          <ul class="navbar-nav me-auto mb-2 mb-md-0 navbar-nav">
+            <li class="nav-item"><a href="index.html" class="nav-link fs-4">Home</a></li>
+            <li class="nav-item"><a href="about.html" class="nav-link fs-4">About Us</a></li>
+            <li class="nav-item"><a href="reviews1.html" class="nav-link fs-4">Reviews</a></li>
+            <li class="nav-item"><a href="locations.html" class="nav-link fs-4">Location</a></li>
+            <li class="nav-item"><a href="contact.html" class="nav-link fs-4">Contact Us</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </nav>
 
-    </body>
+  <header>
+    <div class="bg-image container-fluid bg-images" style="background-image: url('/images/mountain.jpg');">
+      <div class="row bg-dark" style="--bs-bg-opacity: .7;">
+        <div class="col">
+          <img class="img-fluid mx-auto d-block" src="images/logo1.png" alt="logo">
+        </div>
+      </div>
+    </div>
+  </header>
+
+  <div class="container mt-4">
+    <div class="row">
+      <div class="col">
+        <h1 class="text-center">Contact Us</h1>
+        <p>Contacting us is a straightforward and effective way to address any questions or concerns you may have. Our dedicated support team is here to assist you with a wide range of inquiries, ensuring that you have a seamless experience. Whether you have questions about our products, need assistance navigating our services, or require clarification on any aspect of your user experience, reaching out to us is the best way to obtain accurate and timely information. We value your feedback and are committed to providing prompt and helpful responses to ensure your satisfaction. Our contact channels, including email, and phone are designed to accommodate your preferences and convenience. Don't hesitate to get in touch! We're here to help and make your interaction with us as smooth as possible! Your inquiries contribute to our ongoing commitment to excellence, and we appreciate the opportunity to assist you. Thanks!</p>
+        <p>Phone: (999) 999-9999</p>
+        <p>Email: admin@ZGAcademy.com</p>
+
+        
+  <section class="container">
+    <div class="row">
+      <div class="col">
+        <h2 class="text-center">Make a Reservation</h2>
+        <h3>Contact Us</h3>
+        
+        <form>
+          <div class="mb-3">
+            <label for="exampleFormControlInput1" class="form-label">Email address</label>
+            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+          </div>
+          <div class="mb-3">
+            <label for="exampleFormControlTextarea1" class="form-label">Send Your Message</label>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+          </div>
+
+          <button type="submit" class="btn btn-primary mb-3">Send</button>
+        </form>
+      </div>
+    </div>
+  </section>
+  <footer class="navbar-background">
+    <div class="container">
+      <div class="row">
+        <div class="col pt-2">
+          <a class="navbar-brand text-center" href="">
+            <img src="images/CopyRight.png" width="220px" class="align-middle mx-auto d-block" alt="My Website">
+          </a>
+          <p class="text-center">&copy 2023 | Group 5 - CS 220</p>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+</body>
 </html>
