--- a/index.html
+++ b/index.html
@@ -27,6 +27,15 @@
             </center>
         </div>
 
+        <div class="container text-center">
+            <img src="images/Home Page.png" alt="home picture" class="home mx-auto" style="max-width: 100%;">
+        </div>
 
+        <h1>ONE OF A KIND SURVIVAL TRAINING</h1>
+        <p>Welcome to our One-of-a-Kind Zombie Survival Training Camp — an immersive experience like no other! Unleash your inner survivor as our expert instructors guide you through a hands-on journey, equipping you with the essential skills needed to thrive in a world overrun by the undead.
+
+            From mastering self-defense techniques to honing wilderness survival skills, our camp goes beyond the ordinary, preparing you for the unexpected challenges that may arise during a zombie apocalypse. Join a community of like-minded individuals, and embark on a transformative adventure that combines physical fitness, tactical training, and strategic thinking.
+            
+            Are you ready to turn fear into fortitude? Embrace the extraordinary and enroll in our Zombie Survival Training Camp today!</p>
     </body>
 </html>
