--- a/index.html
+++ b/index.html
@@ -49,38 +49,10 @@
 
     <h1>Meet Your Instructors</h1>
     <div class="instructor-container">
-        <div class="instructor">
-            <img src="images/jeff.jpg" alt="Jeff" class="instructor-img">
-           
-
-            <div class="person">
-                <p class="instructor-info">
-                    <strong>Jeff</strong><br>
-                    Go-to Weapon: Shotgun<br>
-                    Favorite survival gear: Multi-tool<br>
-                    Favorite stress reliever: Playing cards
-                </p>
-            </div>
-
-            <div class="instructor">
-                <img src="images/spencer.jpg" alt="Spencer" class="instructor-img">
-                <p class="instructor-info">
-                    <strong>Spencer</strong><br>
-                    Go-to Weapon: Crossbow<br>
-                    Favorite survival gear: Binoculars<br>
-                    Favorite stress reliever: Yoga
-                </p>
-            </div>
-
-            <div class="instructor">
-                <img src="images/jinya.jpg" alt="Jinya" class="instructor-img">
-                <p class="instructor-info">
-                    <strong>Jinya</strong><br>
-                    Go-to Weapon: Machete<br>
-                    Favorite survival gear: Firestarter<br>
-                    Favorite stress reliever: Singing
-                </p>
-            </div>
+        <button id="jeffButton">Jeff</button>
+        <button id="spencerButton">Spencer</button>
+        <button id="jinyaButton">Jinya</button>
+    </div>
 
 
             <h1 class="section-heading">Camp Details</h1>
