--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
 
     <h1>Meet Your Instructors</h1>
     <div class="instructor-container">
-        <button id="jeffButton">Jeff</button>
-        <button id="spencerButton">Spencer</button>
-        <button id="jinyaButton">Jinya</button>
+        <a href="aboutUs.html" class="round-button" id="jeffButton" onclick="showInstructorDialog('Jeff')">Jeff</a>
+        <a href="aboutUs.html" class="round-button" id="spencerButton"onclick="showInstructorDialog('Spencer')">Spencer</a>
+        <a href="aboutUs.html" class="round-button" id="JinyaButton" onclick="showInstructorDialog('Jinya')">Jinya</a>
     </div>
 
 
@@ -117,6 +117,7 @@
                         one
                         blindly.</li>
                 </ol>
+            </div>
 
 </body>
 
