--- a/trainingplans.html
+++ b/trainingplans.html
@@ -1,19 +1,53 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Training Plans</title>
-        <link rel="stylesheet" href="styles.css">
-        <script src="script.js"></script> 
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+<head>
+    <title>Training Plans</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="script.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        const plan1 = '{"name" : "Survival Basics Bootcamp:", "date" : "", "description" : "A comprehensive introductory course covering the fundamental survival skills necessary to navigate and endure a zombie outbreak. This plan includes hands-on training in basic self-defense techniques, shelter construction, emergency first aid, resource management, and strategic evasion tactics. Participants will gain crucial knowledge on survival mindset and situational awareness."}'
 
-    </head>
-    <body>
+        function loadPlans() {
+            load1();
+            load2();
+            load3();
+            load4();
+            load5();
+        }
 
-    </body>
+        function load1() {
+            const printReview = JSON.parse(review1);
+            document.getElementById("plan1").innerHTML = printReview.name;
+            document.getElementById("price1").innerHTML = printReview.price;
+            document.getElementById("d1").innerHTML = printReview.description;
+        }
+
+    </script>
+</head>
+
+<body>
+    <h2 class="d-flex justify-content-center">Training Plans</h2>
+
+
+    <div class="col">
+        <div class="d-flex justify-content-center" style="height:200px ;width:75%; object-fit:cover; background: url('images/tP/sB.jpg')"><!--Review-->
+            <div class="media border p-3" >
+                <div class="media-body">
+                    <h1><span id="plan1" style="color: #fefefe;">Hello World</span><small><i id="price1"></i></small></h4>
+                    <p id="d1"></p>
+                </div>
+            </div>
+        </div><!--Review-->
+
+    </div><!--col-->
+
+</body>
+
 </html>
