--- a/contactUs.html
+++ b/contactUs.html
@@ -27,7 +27,7 @@
             <li class="nav-item"><a href="about.html" class="nav-link fs-4">About Us</a></li>
             <li class="nav-item"><a href="reviews1.html" class="nav-link fs-4">Reviews</a></li>
             <li class="nav-item"><a href="locations.html" class="nav-link fs-4">Location</a></li>
-            <li class="nav-item"><a href="contact.html" class="nav-link fs-4">Contact Us</a></li>
+            <li class="nav-item"><a href="contactUs.html" class="nav-link fs-4">Contact Us</a></li>
           </ul>
         </div>
       </div>
