--- a/contactUs.html
+++ b/contactUs.html
@@ -36,9 +36,9 @@
 
   <header>
     <div class="bg-image container-fluid bg-images" style="background-image: url('/images/mountain.jpg');">
-      <div class="row bg-dark" style="--bs-bg-opacity: .7;">
+      <div class="row" style="--bs-bg-opacity: .7;">
         <div class="col">
-          <img class="img-fluid mx-auto d-block" src="images/logo1.png" alt="logo">
+          <img class="img-fluid mx-auto d-block" src="images/logo1.png" width="500px" height="500px" alt="logo">
         </div>
       </div>
     </div>
