--- a/trainingplans.html
+++ b/trainingplans.html
@@ -23,11 +23,16 @@
             <div class="media border p-3" >
                 <div class="media-body">
                     <h1>
-                        <span  style="color: #fefefe; text-shadow: #0e0d0d 1px 0 10px;">Survival Basics Bootcamp:</span>
-                        <span class="d-flex justify-content-end" style="color: #fefefe; text-shadow: #0e0d0d 1px 0 10px;">$49.99</span>
+                        <span  style="color: #fefefe; text-shadow: #0e0d0d 1px 0 10px;">
+                            Survival Basics Bootcamp:
+                        </span>
+                        <span class="d-flex justify-content-end" style="color: #fefefe; text-shadow: #0e0d0d 1px 0 10px;">
+                            $49.99
+                        </span>
                     </h1>
                     <p style="color: #fefefe; text-shadow: #0e0d0d 1px 0 10px; margin-right: 10%;">
-                        Description: A comprehensive introductory course covering the fundamental survival skills necessary to navigate 
+                        Description: <br>
+                        A comprehensive introductory course covering the fundamental survival skills necessary to navigate 
                         and endure a zombie outbreak. This plan includes hands-on training in basic self-defense techniques, shelter 
                         construction, emergency first aid, resource management, and strategic evasion tactics. Participants will gain 
                         crucial knowledge on survival mindset and situational awareness.
@@ -40,11 +45,16 @@
             <div class="media border p-3" >
                 <div class="media-body">
                     <h1>
-                        <span  style="color: #fefefe; text-shadow: #0e0d0d 1px 0 10px;">Advanced Combat Tactics Intensive:</span>
-                        <span class="d-flex justify-content-end" style="color: #fefefe; text-shadow: #0e0d0d 1px 0 10px;">$49.99</span>
+                        <span  style="color: #fefefe; text-shadow: #0e0d0d 1px 0 10px;">
+                            Advanced Combat Tactics Intensive:
+                        </span>
+                        <span class="d-flex justify-content-end" style="color: #fefefe; text-shadow: #0e0d0d 1px 0 10px;">
+                            $49.99
+                        </span>
                     </h1>
                     <p style="color: #fefefe; text-shadow: #0e0d0d 1px 0 10px; margin-right: 10%;">
-                        Description: An intensive training program designed for individuals seeking advanced combat skills specifically tailored 
+                        Description: <br>
+                        An intensive training program designed for individuals seeking advanced combat skills specifically tailored 
                         for zombie encounters. This plan focuses on weapon proficiency, close combat techniques, team-based strategies, and 
                         scenario-based simulations to effectively neutralize zombies while minimizing risk. Participants will learn tactical 
                         maneuvers and defensive strategies essential for combat in chaotic environments.
@@ -57,11 +67,16 @@
             <div class="media border p-3" >
                 <div class="media-body">
                     <h1>
-                        <span  style="color: #fefefe; text-shadow: #0e0d0d 1px 0 10px;">Outpost Defense and Fortification Workshop:</span>
-                        <span class="d-flex justify-content-end" style="color: #fefefe; text-shadow: #0e0d0d 1px 0 10px;">$99.99</span>
+                        <span  style="color: #fefefe; text-shadow: #0e0d0d 1px 0 10px;">
+                            Outpost Defense and Fortification Workshop:
+                        </span>
+                        <span class="d-flex justify-content-end" style="color: #fefefe; text-shadow: #0e0d0d 1px 0 10px;">
+                            $99.99
+                        </span>
                     </h1>
                     <p style="color: #fefefe; text-shadow: #0e0d0d 1px 0 10px; margin-right: 10%;">
-                        Description: <br>This specialized workshop emphasizes fortification techniques and outpost defense strategies against 
+                        Description: <br>
+                        This specialized workshop emphasizes fortification techniques and outpost defense strategies against 
                         zombie hordes. Participants will engage in practical sessions covering fortification construction, barrier 
                         reinforcement, perimeter security, and tactical positioning. The training includes hands-on exercises in fortifying 
                         safe zones and managing defensive structures, preparing individuals to defend against zombie incursions.
@@ -74,11 +89,19 @@
             <div class="media border p-3" >
                 <div class="media-body">
                     <h1>
-                        <span  style="color: #fefefe; text-shadow: #0e0d0d 1px 0 10px;"></span>
-                        <span class="d-flex justify-content-end" style="color: #fefefe; text-shadow: #0e0d0d 1px 0 10px;"></span>
+                        <span  style="color: #fefefe; text-shadow: #0e0d0d 1px 0 10px;"> 
+                            Medical Emergency Response for Apocalypse Situations (M.E.R.A.S.):
+                        </span>
+                        <span class="d-flex justify-content-end" style="color: #fefefe; text-shadow: #0e0d0d 1px 0 10px;">
+                            $125.99
+                        </span>
                     </h1>
                     <p style="color: #fefefe; text-shadow: #0e0d0d 1px 0 10px; margin-right: 10%;">
-                    
+                        Description: <br>
+                        Aimed at medical professionals, first responders, and civilians, this plan focuses on medical emergency response in 
+                        the context of a zombie outbreak. It covers trauma care, triage methods, infectious disease control, improvised medical 
+                        supplies, and field surgeries. Participants will practice emergency medical procedures in realistic scenarios to handle 
+                        injuries and illnesses during apocalyptic situations.
                     </p>
                 </div>
             </div>
@@ -88,11 +111,19 @@
             <div class="media border p-3" >
                 <div class="media-body">
                     <h1>
-                        <span  style="color: #fefefe; text-shadow: #0e0d0d 1px 0 10px;"></span>
-                        <span class="d-flex justify-content-end" style="color: #fefefe; text-shadow: #0e0d0d 1px 0 10px;"></span>
+                        <span  style="color: #fefefe; text-shadow: #0e0d0d 1px 0 10px;">
+                            Survivor Community Building and Leadership Development:
+                        </span>
+                        <span class="d-flex justify-content-end" style="color: #fefefe; text-shadow: #0e0d0d 1px 0 10px;">
+                            $199.99
+                        </span>
                     </h1>
                     <p style="color: #fefefe; text-shadow: #0e0d0d 1px 0 10px; margin-right: 10%;">
-                        
+                        Description: <br>
+                        Geared towards individuals interested in leadership roles and community building during a zombie 
+                        apocalypse. This program provides guidance on establishing survivor communities, leadership principles, conflict 
+                        resolution, resource allocation, and ethical decision-making in post-apocalyptic scenarios. Participants will 
+                        develop skills essential for leading and managing groups in crisis situations.
                     </p>
                 </div>
             </div>
