--- a/aboutUs.html
+++ b/aboutUs.html
@@ -30,9 +30,9 @@
                 </div>
     
                 <div class="instructor">
-                    <img src="images/spencer.jpg" alt="Spencer" class="instructor-img">
+                    <img src="images/jon.jpg" alt="Jon" class="instructor-img">
                     <p class="instructor-info">
-                        <strong>Spencer</strong><br>
+                        <strong>Jon</strong><br>
                         Go-to Weapon: Crossbow<br>
                         Favorite survival gear: Binoculars<br>
                         Favorite stress reliever: Yoga
