--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
 <body>
     <div class="container">
-
+        <div class="header">
         <img src="images/logo2.png" alt="Logo" class="logo" width="200" height="auto">
-
         <h1 class="main-heading text-center">Zombie Survival Training Camp</h1>
+        </div>
         <nav class="text-center">
             <a href="aboutUs.html">About Us</a> |
             <a href="reviews1.html">Reviews</a> |
@@ -50,7 +50,7 @@
     <h1>Meet Your Instructors</h1>
     <div class="instructor-container">
         <a href="aboutUs.html" class="round-button" id="jeffButton" onclick="showInstructorDialog('Jeff')">Jeff</a>
-        <a href="aboutUs.html" class="round-button" id="spencerButton"onclick="showInstructorDialog('Spencer')">Spencer</a>
+        <a href="aboutUs.html" class="round-button" id="jonButton"onclick="showInstructorDialog('Jon')">Jon</a>
         <a href="aboutUs.html" class="round-button" id="JinyaButton" onclick="showInstructorDialog('Jinya')">Jinya</a>
     </div>
 
