--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
 <body>
     <div class="container">
         <div class="header">
-        <img src="images/logo2.png" alt="Logo" class="logo" width="200" height="auto">
-        <h1 class="main-heading text-center">Zombie Survival Training Camp</h1>
+            <img src="images/logo2.png" alt="Logo" class="logo" width="200" height="auto">
+            <h1 class="main-heading text-center">Zombie Survival Training Camp</h1>
+
         </div>
         <nav class="text-center">
             <a href="aboutUs.html">About Us</a> |
@@ -35,11 +36,12 @@
 
     <h1 class="section-heading">ONE OF A KIND SURVIVAL TRAINING</h1>
     <p class="section-text">Welcome to our One-of-a-Kind Zombie Survival Training Camp — an immersive experience like no
-        other! Unleash your
-        inner survivor as our expert instructors guide you through a hands-on journey, equipping you with the essential
-        skills needed to thrive in a world overrun by the undead.
+        other! <br> Unleash your
+        inner survivor as our expert instructors guide you through a hands-on journey, <br>
+        equipping you with the essential
+        skills needed to thrive in a world overrun by the undead. <br>
 
-        From mastering self-defense techniques to honing wilderness survival skills, our camp goes beyond the ordinary,
+        From mastering self-defense techniques to honing wilderness survival skills, <br> our camp goes beyond the ordinary,
         preparing you for the unexpected challenges that may arise during a zombie apocalypse. Join a community of
         like-minded individuals, and embark on a transformative adventure that combines physical fitness, tactical
         training, and strategic thinking.
@@ -50,74 +52,74 @@
     <h1>Meet Your Instructors</h1>
     <div class="instructor-container">
         <a href="aboutUs.html" class="round-button" id="jeffButton" onclick="showInstructorDialog('Jeff')">Jeff</a>
-        <a href="aboutUs.html" class="round-button" id="jonButton"onclick="showInstructorDialog('Jon')">Jon</a>
+        <a href="aboutUs.html" class="round-button" id="jonButton" onclick="showInstructorDialog('Jon')">Jon</a>
         <a href="aboutUs.html" class="round-button" id="JinyaButton" onclick="showInstructorDialog('Jinya')">Jinya</a>
     </div>
 
 
-            <h1 class="section-heading">Camp Details</h1>
-            <p class="section-text">Zombie Survival Camp offers day and weekend camps, and we are also available to book
-                your <br>
-                private corporate, team building or other special event. See below for a description of each camp.<br>
-                All classes are led by certified instructors. Classes are held outdoors. Based on the type of training
-                <br>
-                we provide, you must be able to comfortably navigate on level grass surfaces. All participation is
-                optional.
+    <h1 class="section-heading">Camp Details</h1>
+    <p class="section-text">Zombie Survival Camp offers day and weekend camps, and we are also available to book
+        your <br>
+        private corporate, team building or other special event. See below for a description of each camp.<br>
+        All classes are led by certified instructors. Classes are held outdoors. Based on the type of training
+        <br>
+        we provide, you must be able to comfortably navigate on level grass surfaces. All participation is
+        optional.
 
-            <div class="survival-tips">
-                <h1>Survival Tips&Trainings</h1>
-                <p>12 tips for surviving a zombie apocalypse</p>
-                <ol class="tips-list">
-                    <li><strong>Separate friends from foes:</strong> You can’t survive an apocalypse alone. Build a
-                        small,
-                        close-knit team of allies.</li>
+    <div class="survival-tips">
+        <h1>Survival Tips&Trainings</h1>
+        <p>12 tips for surviving a zombie apocalypse</p>
+        <ol class="tips-list">
+            <li><strong>Separate friends from foes:</strong> You can’t survive an apocalypse alone. Build a
+                small,
+                close-knit team of allies.</li>
 
-                    <li><strong>Set up a base:</strong> Find a safe place before dark where you can plan and sleep
-                        without
-                        fear
-                        of zombie interruption.</li>
+            <li><strong>Set up a base:</strong> Find a safe place before dark where you can plan and sleep
+                without
+                fear
+                of zombie interruption.</li>
 
-                    <li><strong>Make hunting for supplies a priority:</strong> Prioritize finding food, first aid kits,
-                        lighters, sleeping bags, and more.</li>
+            <li><strong>Make hunting for supplies a priority:</strong> Prioritize finding food, first aid kits,
+                lighters, sleeping bags, and more.</li>
 
-                    <li><strong>Don’t drink the water:</strong> Bottled water is crucial. An infectious virus may be in
-                        the
-                        water. Hand sanitizer is also essential.</li>
+            <li><strong>Don’t drink the water:</strong> Bottled water is crucial. An infectious virus may be in
+                the
+                water. Hand sanitizer is also essential.</li>
 
-                    <li><strong>Pull your weight:</strong> Make yourself indispensable to your survival group to avoid
-                        being
-                        abandoned.</li>
+            <li><strong>Pull your weight:</strong> Make yourself indispensable to your survival group to avoid
+                being
+                abandoned.</li>
 
-                    <li><strong>Eliminate the weakest link:</strong> If a team member is a liability, it's acceptable to
-                        abandon
-                        them to their fate.</li>
+            <li><strong>Eliminate the weakest link:</strong> If a team member is a liability, it's acceptable to
+                abandon
+                them to their fate.</li>
 
-                    <li><strong>Find the perfect zombie-fighting ensemble:</strong> Protective clothing is essential to
-                        avoid
-                        blood splatter. Goggles, gloves, and a helmet are recommended.</li>
+            <li><strong>Find the perfect zombie-fighting ensemble:</strong> Protective clothing is essential to
+                avoid
+                blood splatter. Goggles, gloves, and a helmet are recommended.</li>
 
-                    <li><strong>Just because you have shelter doesn’t mean you’re safe:</strong> Zombies can break
-                        through
-                        barriers, especially in large numbers.</li>
+            <li><strong>Just because you have shelter doesn’t mean you’re safe:</strong> Zombies can break
+                through
+                barriers, especially in large numbers.</li>
 
-                    <li><strong>Never turn your back on a zombie:</strong> Zombies can move quickly, especially at
-                        night.
-                    </li>
+            <li><strong>Never turn your back on a zombie:</strong> Zombies can move quickly, especially at
+                night.
+            </li>
 
-                    <li><strong>Find ways to fight boredom:</strong> Create your own entertainment, and personal dramas
-                        can
-                        be a
-                        source of distraction.</li>
+            <li><strong>Find ways to fight boredom:</strong> Create your own entertainment, and personal dramas
+                can
+                be a
+                source of distraction.</li>
 
-                    <li><strong>Be ready for anything:</strong> Prepare physically and psychologically for the unknown
-                        nature of
-                        a zombie apocalypse.</li>
+            <li><strong>Be ready for anything:</strong> Prepare physically and psychologically for the unknown
+                nature of
+                a zombie apocalypse.</li>
 
-                    <li><strong>Beware of humans:</strong> In an apocalypse, friends can become foes quickly. Trust no
-                        one
-                        blindly.</li>
-                </ol>
-            </div>
+            <li><strong>Beware of humans:</strong> In an apocalypse, friends can become foes quickly. Trust no
+                one
+                blindly.</li>
+        </ol>
+    </div>
 
 </body>
 
