finished training plans, and added nav bar to all pages, and copy right footer

--- a/contactUs.html
+++ b/contactUs.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+  <!--Main Contributor: Jinya -->
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -79,7 +80,7 @@
       <div class="row">
         <div class="col pt-2">
           <a class="navbar-brand text-center" href="">
-            <img src="images/CopyRight.png" width="220px" class="align-middle mx-auto d-block" alt="My Website">
+            <img src="images/CopyRight.png" width="100px" class="align-middle mx-auto d-block" alt="My Website">
           </a>
           <p class="text-center">&copy 2023 | Group 5 - CS 220</p>
         </div>
