--- a/trainingplans.html
+++ b/trainingplans.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
+<!--Main Contributor: Jonathan -->
+
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Training Plans</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js"></script>
@@ -11,125 +15,198 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
-
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Serif:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 
 <body>
-    <h2 class="d-flex justify-content-center">Training Plans</h2>
+    <nav class="navbar navbar-expand-lg py-3 navbar-background" style="background-color: white;">
+        <div class="container">
+            <a class="navbar-brand" href="index.html">
+                <img src="images/logo3.png" width="200px" class="align-middle me-1 " alt="My Website">
+            </a>
 
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#myNavbar"
+                aria-controls="myNavbar" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="myNavbar">
+                <div lc-helper="shortcode" class="ms-auto">
+                    <ul class="navbar-nav me-auto mb-2 mb-md-0 navbar-nav">
+                        <li class="nav-item"><a href="index.html" class="nav-link fs-4">Home</a></li>
+                        <li class="nav-item"><a href="about.html" class="nav-link fs-4">About Us</a></li>
+                        <li class="nav-item"><a href="trainingplans.html" class="nav-link fs-4">Training Plans</a></li>
+                        <li class="nav-item"><a href="reviews1.html" class="nav-link fs-4">Reviews</a></li>
+                        <li class="nav-item"><a href="locations.html" class="nav-link fs-4">Location</a></li>
+                        <li class="nav-item"><a href="contactUs.html" class="nav-link fs-4">Contact Us</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </nav>
+
+
+    <h2 class="d-flex justify-content-center" style="font-family: '1942'; font-size: 50px;">Training
+        Plans</h2>
+
+    <p class="d-flex justify-content-center" style="font-family: '1942'; font-size: 25px; ">Below is a list of training
+        courses we provide:</p>
 
     <div class="col" style=" margin-left: 10%; margin-right: 10%;">
-        <div class="d-flex justify-content-center" style=" width: 75%;background: url('images/tP/sB.jpg')"><!--Review-->
-            <div class="media border p-3" >
-                <div class="media-body">
-                    <h1>
-                        <span  style="color: #fefefe; text-shadow: #0e0d0d 1px 0 10px;">
-                            Survival Basics Bootcamp:
-                        </span>
-                        <span class="d-flex justify-content-end" style="color: #fefefe; text-shadow: #0e0d0d 1px 0 10px;">
-                            $49.99
-                        </span>
-                    </h1>
-                    <p style="color: #fefefe; text-shadow: #0e0d0d 1px 0 10px; margin-right: 10%;">
-                        Description: <br>
-                        A comprehensive introductory course covering the fundamental survival skills necessary to navigate 
-                        and endure a zombie outbreak. This plan includes hands-on training in basic self-defense techniques, shelter 
-                        construction, emergency first aid, resource management, and strategic evasion tactics. Participants will gain 
-                        crucial knowledge on survival mindset and situational awareness.
-                    </p>
-                </div>
+        <div class="d-flex justify-content-center rounded-corners"
+            style=" width: 75%;background: url('images/tP/SBB.jpg')">
+            <div class="media border p-3 rounded-corners">
+                <a href="trainingplans.html" id="SBB" style="text-decoration: none;"
+                    onclick="showInstructorDialog('SBB')">
+                    <div class="media-body">
+                        <h1>
+                            <span style="color: #fefefe; text-shadow: #0e0d0d 1px 0 10px;">
+                                Survival Basics Bootcamp:
+                            </span>
+                            <span class="d-flex justify-content-end"
+                                style="color: #fefefe; text-shadow: #0e0d0d 1px 0 10px;">
+                                $49.99
+                            </span>
+                        </h1>
+                        <p style="color: #fefefe; text-shadow: #0e0d0d 1px 0 10px; margin-right: 10%;">
+                            Description: <br>
+                            A comprehensive introductory course covering the fundamental survival skills necessary to
+                            navigate and endure a zombie outbreak. This plan includes hands-on training in basic
+                            self-defense techniques, shelter construction, emergency first aid, resource management, and
+                            strategic evasion tactics. Participants will gain crucial knowledge on survival mindset and
+                            situational awareness.
+                        </p>
+                    </div>
+                </a>
             </div>
-        </div><!--Review-->
+        </div>
         <br>
-        <div class="d-flex justify-content-center" style=" width: 75%;background: url('images/tP/sB.jpg')"><!--Review-->
-            <div class="media border p-3" >
-                <div class="media-body">
-                    <h1>
-                        <span  style="color: #fefefe; text-shadow: #0e0d0d 1px 0 10px;">
-                            Advanced Combat Tactics Intensive:
-                        </span>
-                        <span class="d-flex justify-content-end" style="color: #fefefe; text-shadow: #0e0d0d 1px 0 10px;">
-                            $49.99
-                        </span>
-                    </h1>
-                    <p style="color: #fefefe; text-shadow: #0e0d0d 1px 0 10px; margin-right: 10%;">
-                        Description: <br>
-                        An intensive training program designed for individuals seeking advanced combat skills specifically tailored 
-                        for zombie encounters. This plan focuses on weapon proficiency, close combat techniques, team-based strategies, and 
-                        scenario-based simulations to effectively neutralize zombies while minimizing risk. Participants will learn tactical 
-                        maneuvers and defensive strategies essential for combat in chaotic environments.
-                    </p>
-                </div>
+        <div class="d-flex justify-content-center rounded-corners"
+            style="object-fit: cover ; width: 75%; background: url('images/tP/ACTI.jpg')">
+            <div class="media border p-3 rounded-corners">
+                <a href="trainingplans.html" id="ACTI" style="text-decoration: none;"
+                    onclick="showInstructorDialog('ACTI')">
+                    <div class="media-body">
+                        <h1>
+                            <span style="color: #fefefe; text-shadow: #0e0d0d 1px 0 10px;">
+                                Advanced Combat Tactics Intensive:
+                            </span>
+                            <span class="d-flex justify-content-end"
+                                style="color: #fefefe; text-shadow: #0e0d0d 1px 0 10px;">
+                                $49.99
+                            </span>
+                        </h1>
+                        <p style="color: #fefefe; text-shadow: #0e0d0d 1px 0 10px; margin-right: 10%;">
+                            Description: <br>
+                            An intensive training program designed for individuals seeking advanced combat skills
+                            specifically tailored for zombie encounters. This plan focuses on weapon proficiency, close
+                            combat techniques, team-based strategies, and scenario-based simulations to effectively
+                            neutralize zombies while minimizing risk. Participants will learn tactical maneuvers and
+                            defensive strategies essential for combat in chaotic environments.
+                        </p>
+                    </div>
+                </a>
             </div>
-        </div><!--Review-->
+        </div>
         <br>
-        <div class="d-flex justify-content-center" style=" width: 75%;background: url('images/tP/sB.jpg')"><!--Review-->
-            <div class="media border p-3" >
-                <div class="media-body">
-                    <h1>
-                        <span  style="color: #fefefe; text-shadow: #0e0d0d 1px 0 10px;">
-                            Outpost Defense and Fortification Workshop:
-                        </span>
-                        <span class="d-flex justify-content-end" style="color: #fefefe; text-shadow: #0e0d0d 1px 0 10px;">
-                            $99.99
-                        </span>
-                    </h1>
-                    <p style="color: #fefefe; text-shadow: #0e0d0d 1px 0 10px; margin-right: 10%;">
-                        Description: <br>
-                        This specialized workshop emphasizes fortification techniques and outpost defense strategies against 
-                        zombie hordes. Participants will engage in practical sessions covering fortification construction, barrier 
-                        reinforcement, perimeter security, and tactical positioning. The training includes hands-on exercises in fortifying 
-                        safe zones and managing defensive structures, preparing individuals to defend against zombie incursions.
-                    </p>
-                </div>
+        <div class="d-flex justify-content-center rounded-corners"
+            style=" width: 75%;background: url('images/tP/ODaFW.jpg')">
+            <div class="media border p-3 rounded-corners">
+                <a href="trainingplans.html" id="ODaFW" style="text-decoration: none;"
+                    onclick="showInstructorDialog('ODaFW')">
+                    <div class="media-body">
+                        <h1>
+                            <span style="color: #fefefe; text-shadow: #0e0d0d 1px 0 10px;">
+                                Outpost Defense and Fortification Workshop:
+                            </span>
+                            <span class="d-flex justify-content-end"
+                                style="color: #fefefe; text-shadow: #0e0d0d 1px 0 10px;">
+                                $99.99
+                            </span>
+                        </h1>
+                        <p style="color: #fefefe; text-shadow: #0e0d0d 1px 0 10px; margin-right: 10%;">
+                            Description: <br>
+                            This specialized workshop emphasizes fortification techniques and outpost defense strategies
+                            against zombie hordes. Participants will engage in practical sessions covering fortification
+                            construction, barrier reinforcement, perimeter security, and tactical positioning. The
+                            training includes hands-on exercises in fortifying safe zones and managing defensive
+                            structures, preparing individuals to defend against zombie incursions.
+                        </p>
+                    </div>
+                </a>
             </div>
-        </div><!--Review-->
+        </div>
         <br>
-        <div class="d-flex justify-content-center" style=" width: 75%;background: url('images/tP/sB.jpg')"><!--Review-->
-            <div class="media border p-3" >
-                <div class="media-body">
-                    <h1>
-                        <span  style="color: #fefefe; text-shadow: #0e0d0d 1px 0 10px;"> 
-                            Medical Emergency Response for Apocalypse Situations (M.E.R.A.S.):
-                        </span>
-                        <span class="d-flex justify-content-end" style="color: #fefefe; text-shadow: #0e0d0d 1px 0 10px;">
-                            $125.99
-                        </span>
-                    </h1>
-                    <p style="color: #fefefe; text-shadow: #0e0d0d 1px 0 10px; margin-right: 10%;">
-                        Description: <br>
-                        Aimed at medical professionals, first responders, and civilians, this plan focuses on medical emergency response in 
-                        the context of a zombie outbreak. It covers trauma care, triage methods, infectious disease control, improvised medical 
-                        supplies, and field surgeries. Participants will practice emergency medical procedures in realistic scenarios to handle 
-                        injuries and illnesses during apocalyptic situations.
-                    </p>
-                </div>
+        <div class="d-flex justify-content-center rounded-corners"
+            style=" width: 75%;background: url('images/tP/MERAS.jpg')">
+            <div class="media border p-3 rounded-corners">
+                <a href="trainingplans.html" id="MERAS" style="text-decoration: none;"
+                    onclick="showInstructorDialog('MERAS')">
+                    <div class="media-body">
+                        <h1>
+                            <span style="color: #fefefe; text-shadow: #0e0d0d 1px 0 10px;">
+                                Medical Emergency Response for Apocalypse Situations (M.E.R.A.S.):
+                            </span>
+                            <span class="d-flex justify-content-end"
+                                style="color: #fefefe; text-shadow: #0e0d0d 1px 0 10px;">
+                                $125.99
+                            </span>
+                        </h1>
+                        <p style="color: #fefefe; text-shadow: #0e0d0d 1px 0 10px; margin-right: 10%;">
+                            Description: <br>
+                            Aimed at medical professionals, first responders, and civilians, this plan focuses on
+                            medical emergency response in the context of a zombie outbreak. It covers trauma care,
+                            triage methods, infectious diseasecontrol, improvised medical supplies, and field surgeries.
+                            Participants will practice emergency medical procedures in realistic scenarios to handle
+                            injuries and illnesses during apocalyptic situations.
+                        </p>
+                    </div>
+                </a>
             </div>
-        </div><!--Review-->
+        </div>
         <br>
-        <div class="d-flex justify-content-center" style=" width: 75%;background: url('images/tP/sB.jpg')"><!--Review-->
-            <div class="media border p-3" >
-                <div class="media-body">
-                    <h1>
-                        <span  style="color: #fefefe; text-shadow: #0e0d0d 1px 0 10px;">
-                            Survivor Community Building and Leadership Development:
-                        </span>
-                        <span class="d-flex justify-content-end" style="color: #fefefe; text-shadow: #0e0d0d 1px 0 10px;">
-                            $199.99
-                        </span>
-                    </h1>
-                    <p style="color: #fefefe; text-shadow: #0e0d0d 1px 0 10px; margin-right: 10%;">
-                        Description: <br>
-                        Geared towards individuals interested in leadership roles and community building during a zombie 
-                        apocalypse. This program provides guidance on establishing survivor communities, leadership principles, conflict 
-                        resolution, resource allocation, and ethical decision-making in post-apocalyptic scenarios. Participants will 
-                        develop skills essential for leading and managing groups in crisis situations.
-                    </p>
-                </div>
+        <div class="d-flex justify-content-center rounded-corners"
+            style=" width: 75%;background: url('images/tP/SCBLD.jpg')">
+            <div class="media border p-3 rounded-corners">
+                <a href="trainingplans.html" id="SCBLD" style="text-decoration: none;"
+                    onclick="showInstructorDialog('SCBLD')">
+                    <div class="media-body">
+                        <h1>
+                            <span style="color: #fefefe; text-shadow: #0e0d0d 1px 0 10px;">
+                                Survivor Community Building and Leadership Development:
+                            </span>
+                            <span class="d-flex justify-content-end"
+                                style="color: #fefefe; text-shadow: #0e0d0d 1px 0 10px;">
+                                $199.99
+                            </span>
+                        </h1>
+                        <p style="color: #fefefe; text-shadow: #0e0d0d 1px 0 10px; margin-right: 10%;">
+                            Description: <br>
+                            Geared towards individuals interested in leadership roles and community building during a
+                            zombie apocalypse. This program provides guidance on establishing survivor communities,
+                            leadership principles, conflict resolution, resource allocation, and ethical decision-making
+                            in post-apocalyptic scenarios. Participants will develop skills essential for leading and
+                            managing groups in crisis situations.
+                        </p>
+                    </div>
+                </a>
             </div>
-        </div><!--Review-->
+        </div>
     </div><!--col-->
-
+    <p class="d-flex justify-content-center" style="font-family: '1942'; font-size: 25px; ">Each training plan offered
+        by Zombiegeddon Academy caters to different aspects of survival, defense, medical care, leadership, and
+        community-building, ensuring a comprehensive preparation for a fictional zombie apocalypse.</p>
+    <br>
+    <br>
+    <footer class="navbar-background" style="background-color: #fbf7f4;">
+        <img src="images/CopyRight.png" width="100px" class="align-middle mx-auto d-block" alt="My Website">
+        <p class="text-center" style="color: black; background-color: white;">&copy 2023 | Group 5 - CS 220</p>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
+        </script>
 </body>
 
 </html>
